--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,104 +1,16 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
 @Article{jiang2025devaluation,
   bibtex_show={true},
   abbr={ASR},
-  title="{The Cultural Devaluation of Feminized Work: The Evolution of Occupational Symbolic Value and Gender Typing in the United States, 1900-2019}",
+  title={The Cultural Devaluation of Feminized Work: The Evolution of Occupational Symbolic Value and Gender Typing in the United States, 1900-2019},
   author={Wenhao Jiang},
   abstract={Previous research on occupational devaluation typically evaluates the potential wage declines associated with a significant inflow of women into an occupation; results have been mixed. Few studies, however, examine the cultural mechanism central to the thesis, where an occupation's symbolic value in multiple dimensions changes in response to the dynamics of its cultural association with women. This paper proposes a new semantic approach to trace the devaluation process in American culture, where occupation titles appear in scholarly and public discourses with varied semantic proximity to gender- and prestige-signaling phrases over time. Decade-specific occupation embedding (1900-2019) from 127 billion words of American English across genres and a novel fixed-effects estimator show a latent cultural bias against women's work, such that an occupation's general prestige and perceived potency (but not its moral standing) declines when it becomes increasingly stereotyped as female. The largest penalties are found in lower- and middle-wage occupations, while most high-wage occupations, despite experiencing large increases in female share in recent years, are persistently stereotyped as male professions without a prestige loss. In total, the cultural mechanism of devaluation accounts for 22.4-25.9% of the observed negative link between occupations' female typing and hourly wages.},
   journal={American Sociological Review},
   year={2025},
-  doi={10.1002/andp.19053220607},
+  doi={https://doi.org/10.31235/osf.io/8q3ca},
   award={https://github.com/wenhaojiangsoc/devaluation},
   award_name={replication file},
-  doi={https://osf.io/preprints/socarxiv/8q3ca_v1},
-  preview={fig3_representation_3D.tiff}
+  doi={https://osf.io/preprints/socarxiv/8q3ca_v1}
 }
