--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,8 +9,9 @@
   abstract={Previous research on occupational devaluation typically evaluates the potential wage declines associated with a significant inflow of women into an occupation; results have been mixed. Few studies, however, examine the cultural mechanism central to the thesis, where an occupation's symbolic value in multiple dimensions changes in response to the dynamics of its cultural association with women. This paper proposes a new semantic approach to trace the devaluation process in American culture, where occupation titles appear in scholarly and public discourses with varied semantic proximity to gender- and prestige-signaling phrases over time. Decade-specific occupation embedding (1900-2019) from 127 billion words of American English across genres and a novel fixed-effects estimator show a latent cultural bias against women's work, such that an occupation's general prestige and perceived potency (but not its moral standing) declines when it becomes increasingly stereotyped as female. The largest penalties are found in lower- and middle-wage occupations, while most high-wage occupations, despite experiencing large increases in female share in recent years, are persistently stereotyped as male professions without a prestige loss. In total, the cultural mechanism of devaluation accounts for 22.4-25.9% of the observed negative link between occupations' female typing and hourly wages.},
   journal={American Sociological Review},
   year={2025},
+  award={This paper received the Aage B. Sørensen award from the International Sociological Association, RC28 Social Stratification, in 2022.},
+  award_name={Aage Sørensen award},
   doi={https://doi.org/10.31235/osf.io/8q3ca},
-  award={https://github.com/wenhaojiangsoc/devaluation},
-  award_name={replication file},
-  doi={https://osf.io/preprints/socarxiv/8q3ca_v1}
+  supp={https://github.com/wenhaojiangsoc/devaluation},
+  code={https://github.com/wenhaojiangsoc/devaluation}
 }
