--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
   code={https://github.com/wenhaojiangsoc/devaluation},
   supp={final_appendix.pdf},
   year={2025},
-  award={This paper received the Burt Award for the Best Graduate Paper in the Economic Sociology section of American Sociological Association in 2025, and the Aage B. Sørensen award from the International Sociological Association, RC28 Social Stratification in 2022.},
+  award={This paper received the Ronald Burt Award for the best graduate paper in the Economic Sociology section of the American Sociological Association in 2025, and the Aage B. Sørensen award from the International Sociological Association, RC28 Social Stratification in 2022.},
   award_name={Burt award},
   doi={https://doi.org/10.31235/osf.io/8q3ca}
 }
