--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,5 +14,5 @@ and Gender Typing in Linguistic Representations, 1900 to 2019},
   year={2025},
   award={This paper received the Ronald Burt Award for the Best Graduate Paper in Economic Sociology of the American Sociological Association in 2025, and the Aage B. Sørensen Sward from the International Sociological Association, RC28 Social Stratification in 2022.},
   award_name={Burt award},
-  pdf={PAPER Jiang 2025.pdf}
+  doi={https://doi.org/10.1177/00031224251362351}
 }
